tests/rosetta/out/Zig/abbreviations-easy.error
zig build: exit status 1
/tmp/abbreviations-easy.zig:97:27: error: use of undeclared identifier 'upper'
